// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should grey out icon when disabled 1`] = `
.circuit-2 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 12px;
  font-size: 15px;
  line-height: 24px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
  padding-left: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-2 circuit-3"
>
  <input
    autoComplete="none"
    className="circuit-0 circuit-1"
    disabled={true}
  />
  <div>
    search.svg
  </div>
</div>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-2 {
  display: inline-block;
  position: relative;
}

.circuit-0 {
  background-color: #FFFFFF;
  border-width: 1px;
  border-style: solid;
  border-color: #D8DDE1;
  border-radius: 4px;
  box-shadow: inset 0 1px 2px 0 rgba(102,113,123,0.12);
  color: #212933;
  padding: 8px 12px;
  font-size: 15px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
}

.circuit-0:focus,
.circuit-0:active {
  border: 1px solid #3388FF;
  outline: none;
}

.circuit-0::-webkit-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::-moz-placeholder {
  color: #9DA7B1;
}

.circuit-0:-ms-input-placeholder {
  color: #9DA7B1;
}

.circuit-0::placeholder {
  color: #9DA7B1;
}

<div
  className="circuit-2 circuit-3"
>
  <input
    autoComplete="none"
    className="circuit-0 circuit-1"
    disabled={false}
  />
  <div>
    search.svg
  </div>
</div>
`;
